cmake_minimum_required(VERSION 3.19)
project(DesignPattern)

set(CMAKE_CXX_STANDARD 14)

add_executable(DesignPattern Single_Responsibility_Principle.h Open-Closed_Principle.h Liskov_Substitution_Principle.h Interface_Segregation_Principle.h Dependency_Inversion_Principle.h CreationalPattern/Factory_Method.h CreationalPattern/Abstract_Factory.h CreationalPattern/Builder.h CreationalPattern/Prototype.h CreationalPattern/Singleton.h StructuralPatterns/Adapter.h StructuralPatterns/Bridge.h StructuralPatterns/Composite.h StructuralPatterns/Decorator.h StructuralPatterns/Facade.h StructuralPatterns/Flyweight.h StructuralPatterns/Proxy.h BehavioralPattern/Chain_of_Responsibility.h BehavioralPattern/Command.h BehavioralPattern/Iterator.h BehavioralPattern/Mediator.h BehavioralPattern/Memento.h BehavioralPattern/Observer.h BehavioralPattern/State.h BehavioralPattern/Strategy.h BehavioralPattern/Template_Method.h BehavioralPattern/Visitor.h)